--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "element-plus": "^2.2.17",
+    "gsap": "^3.11.3",
     "three": "^0.144.0",
     "three-orbit-controls": "^82.1.0",
     "vue": "^3.2.37",
@@ -18,8 +19,8 @@
   "devDependencies": {
     "@types/node": "^18.0.6",
     "@vitejs/plugin-vue": "^3.1.0",
-    "vite": "^3.1.0",
     "sass": "^1.53.0",
-    "sass-loader": "^13.0.2"
+    "sass-loader": "^13.0.2",
+    "vite": "^3.1.0"
   }
 }
