--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^18.0.6",
     "@vitejs/plugin-vue": "^3.1.0",
+    "lil-gui": "^0.17.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "vite": "^3.1.0"
