--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
     "element-plus": "^2.2.17",
     "gsap": "^3.11.3",
     "three": "^0.144.0",
